[package]
name = "basic_trie"
version = "1.2.3"
edition = "2021"
authors = ["LukasCobbler"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["trie", "collection", "generic"]
description = "A simple Trie implementation in Rust"
repository = "https://github.com/lukascobbler/basic_trie"
documentation = "https://docs.rs/basic_trie/"
categories = ["data-structures"]

[dev-dependencies]
serde_json = "1.0.*"
serde-pickle = "1.1.*"
cbor = "0.4.*"
peak_alloc = "0.2.0"

[dependencies]
unicode-segmentation = { version = "1.10.*", optional = true }
serde_crate = { package = "serde", optional = true, version = "1.0.*", features = ["derive"] }
fxhash = "0.2.1"
thin-vec = "0.2.12"
arrayvec = "0.7.4"

[features]
default = ["unicode", "data"]
data = []
unicode = ["unicode-segmentation"]
serde = ["serde_crate", "thin-vec/serde", "arrayvec/serde"]
