[package]
name = "basic_trie"
version = "2.1.0"
edition = "2024"
authors = ["LukasCobbler"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["trie", "collection", "generic"]
description = "A simple Trie implementation in Rust"
repository = "https://github.com/lukascobbler/basic_trie"
documentation = "https://docs.rs/basic_trie/"
categories = ["data-structures"]

[dev-dependencies]
serde_json = "1.0.*"
serde-pickle = "1.1.*"
peak_alloc = "0.2.0"
randomizer = "0.1.2"
growable-bloom-filter = "2.1.0"

[dependencies]
serde_crate = { package = "serde", optional = true, version = "1.0.*", features = ["derive"] }
unicode-segmentation = { version = "1.12.*", optional = true }
unicode-normalization = { version = "0.1.*", optional = true }
fxhash = "0.2.*"
thin-vec = "0.2.*"

[features]
default = ["unicode", "data"]
data = []
unicode = ["unicode-segmentation", "unicode-normalization"]
serde = ["serde_crate", "thin-vec/serde"]
